// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`watchOptions transforms correctly using "watch-0" data 1`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    watchOptions: {
        aggregateTimeout: 300,
        poll: 1000,
        ignored: /node_modules/
    }
}
"
`;

exports[`watchOptions transforms correctly using "watch-0" data 2`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    watchOptions: {
        aggregateTimeout: 300,
        poll: 1000,
        ignored: /node_modules/
    }
}
"
`;

exports[`watchOptions transforms correctly using "watch-1" data 1`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    watchOptions: {
        aggregateTimeout: 300,
        poll: 1000,
        ignored: /node_modules/
    }
}
"
`;

exports[`watchOptions transforms correctly using "watch-2" data 1`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    watchOptions: {
        aggregateTimeout: 300,
        poll: 1000,
        ignored: /node_modules/
    }
}
"
`;

exports[`watchOptions transforms correctly using "watch-3" data 1`] = `
"module.exports = {
	entry: 'index.js',
	output: {
		filename: 'bundle.js'
	},
	watchOptions: {
		aggregateTimeout: 100,
		poll: 69,
		ignored: /node_modules/
	},
	watch: 'me'
}
"
`;

exports[`watchOptions transforms correctly using "watch-3" data 2`] = `
"module.exports = {
	entry: 'index.js',
	output: {
		filename: 'bundle.js'
	},
	watchOptions: {
		aggregateTimeout: 100,
		poll: 90,
		ignored: abc
	},
	watch: 'me'
}
"
`;
